# ragsync-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-06-16-readme-marketability-design.md
examples/: config.example.yaml  folder.yaml  website.yaml
examples/docs/internal/: secret-roadmap.md
examples/docs/setup/: cameras.md  network.md
examples/playbooks/: scan-fails.md
src/ragsync_mcp/: __init__.py  __main__.py  chunking.py  config.py  config_watch.py  embeddings.py  ingestion.py  server.py  vectorstore.py
src/ragsync_mcp/loaders/: __init__.py  base.py  folder.py  website.py
src/ragsync_mcp/watchers/: __init__.py  base.py  filesystem.py  poll.py
tests/: conftest.py  test_chunking.py  test_config.py  test_config_reload.py  test_pipeline.py  test_server.py  test_watch.py
