[project]
name = "ragsync-mcp"
version = "0.1.0"
description = "Configuration-driven RAG MCP server: ingest, watch, index, and search arbitrary knowledge sources behind a stable MCP tool surface."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.5.0",
    "fastembed>=0.3.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "mcp>=1.27.2",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pypdf>=4.0.0",
    "pyyaml>=6.0.3",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
voyage = ["voyageai>=0.2.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
ragsync-mcp = "ragsync_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragsync_mcp"]
